# voice-flow

./: AGENTS.md  CLAUDE.md  install.sh  pyproject.toml  uninstall.sh
Voice Flow.app/Contents/: Info.plist
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
assets/: icon.icns
design/: agent-row-icons.html  assistant-session-history-plan.md  hotkey-overlap-plan.md  panel-redesign.html  panel-remarks.md  pill-states.html  positioning.md  ticket-22-capability-routing-plan.html  ticket-22-capability-routing-plan.md  ticket-22-multidisplay-qa-plan.md  ticket-22-qa-display-history-plan.md  ticket-4-flora-wake-plan.md
research/: heyclicky.md
swift/: Agent.swift  AgentsView.swift  Annotation.swift  App.swift  AssistantHistory.swift  AssistantWake.swift  Capture.swift  CaptureClipboard.swift  CaptureRouting.swift  Codex.swift  Core.swift  DisplayContext.swift  Foundry.swift  Inbox.swift  MCP.swift  Overlay.swift  Panel.swift  ReplyBubble.swift  ScreenCapture.swift  SessionStrip.swift  Settings.swift  Sync.swift  TTS.swift  UI.swift  Watcher.swift  WindowPlacement.swift  main.swift
tests/: test_backend_protocol.py
tests/assistant_history/: main.swift
tests/assistant_wake/: main.swift
tests/capture_clipboard/: main.swift
tests/capture_routing/: main.swift
tests/display_context/: main.swift
tests/window_placement/: main.swift
voice_flow/: __main__.py  app.py  backend.py  cleaner.py  config.py  openai_transcriber.py  paster.py  recorder.py  ui.py
watcher/: ANALYZE.md  README.md  claude-settings.json  com.voiceflow.watcher-analyze.plist
(+28 files in other folders)
