[project]
name = "voice-flow"
version = "0.1.0"
description = "Local speech-to-text dictation with LLM cleanup"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mlx-audio>=0.1.0",
    "mlx-lm>=0.1.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
